--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,18 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.r0adkll:slidableactivity:2.0.6'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
 }
